# construction

./: .gitignore  README.md  gcal.py  main.py  old.py  pyproject.toml  spreadsheet.py
front/: form.html  login.html  submitions.html
front2/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
front2/src/: index.tsx
front2/src/pages/: Form.tsx
infra/: app.ts  cdk.json  package-lock.json  package.json
lambda/: Dockerfile  example_event.json  gcal.py  google_service.py  image-run.sh  main.py  pyproject.toml  spreadsheet.py
lambda/app/: Dockerfile  google_service.py  main.py
